# UNIVER.BY

./: .gitignore  LICENSE  README.md  db.sqlite3  gener.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: django.yml
UniverBY/: asgi.py  settings.py  urls.py  wsgi.py
changelogs/: allver.md  v. 0.1.2.md  v. 0.2.5.md  v. 0.2.md  v. 0.3.md
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_user_license_key_user_licensed.py  0003_alter_user_license_key.py  0004_alter_user_license_key.py  0005_type_user_photo_user_user_type.py  0006_alter_user_user_type.py
main/static/main/css/: details.css  index.css  login.css  style.css
main/static/main/js/: script.js
premium/: admin.py  forms.py  models.py  urls.py  views.py
premium/migrations/: 0001_initial.py  0002_alter_license_options_alter_plan_options_and_more.py  0003_alter_license_key.py  0004_alter_license_key.py  0005_alter_license_key.py  0006_license_expire_date.py  0007_license_expired_license_used.py
premium/static/premium/css/: pricing.css
templates/main/: about.html  base.html  confid.html  homepage.html  index.html  login.html  register.html
templates/premium/: activate.html  premium.html  premium_buy.html  pricing.html
univers/: admin.py  models.py
univers/migrations/: 0001_initial.py  0002_alter_univer_email_alter_univer_facebook_and_more.py  0003_univer_photo.py  0004_alter_univer_photo.py
